fix(bucket-ui): add more spacing for hover menu when scrolled

--- a/client/assets/styles/theme.scss
+++ b/client/assets/styles/theme.scss
@@ -57,7 +57,10 @@ input:focus {
   min-height: 100vh;
   overflow-x: hidden;
   overflow-y: auto;
-  padding: 2rem;
+  padding-top: 2rem;
+  padding-right: 2rem;
+  padding-left: 2rem;
+  padding-bottom: 20rem;
   position: relative;
 }
 
